# rp2040-testing

./: README.md
gpio24/: platformio.ini
gpio24/src/: main.cpp
pulse-receiver/: .env  CMakeLists.txt  README.md  pulse-receiver.c  tasks.py
